--- a/app/src/main/res/layout/rect_activity_main.xml
+++ b/app/src/main/res/layout/rect_activity_main.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity"
-    tools:deviceIds="wear_square">
+    tools:deviceIds="wear_round">
 
     <com.sababado.circularview.CircularView
         android:visibility="gone"
         android:id="@+id/circular_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <com.andexert.library.RippleView
+        app:rv_ripplePadding="-100dp"
+        android:visibility="gone"
+        android:id="@+id/ripple"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.andexert.library.RippleView>
+
+</RelativeLayout>
